# sldyexplore

./: .gitignore  pyproject.toml
src/: mainwin.py  mainwin.ui  mainwin_ui.py  sldyexplore.py
